:sparkles: crud and auth user
